--- a/ThriftExample/pom.xml
+++ b/ThriftExample/pom.xml
@@ -1,17 +1,26 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	
+
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.bandi.thrift</groupId>
 	<artifactId>sample-thrift-parent</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>sample-thrift-parent</name>
-	
-	 <modules>
-        <module>sample-thrift-idl</module>
-        <module>sample-thrift-service</module>
-        <module>sample-thrift-client</module>
-	 </modules>
-	
+
+	<modules>
+		<module>sample-thrift-idl</module>
+		<module>sample-thrift-service</module>
+		<module>sample-thrift-client</module>
+	</modules>
+
+	<dependencies>
+		<!-- 3. logback -->
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.1.3</version>
+		</dependency>
+	</dependencies>
+
 </project>
